start using prettier formatter

--- a/web-frontend/src/index.html
+++ b/web-frontend/src/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Study Decks</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Study Decks</title>
-</head>
-
-<body>
-  <div id="maindiv"></div>
-</body>
-
+  <body>
+    <div id="maindiv"></div>
+  </body>
 </html>
